# excel_processor

./: Procfile  db.sqlite3  index.html  manage.py  pyproject.toml  render.yaml  requirements.txt
GRR_excel_processor/: wsgi.py
apps/: requirements.txt
apps/processor/: apps.py  forms.py  models.py  utils.py  views.py
excel_processor/: requirements.txt  settings.py  urls.py
excel_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
media/processed/: master_20250422_071753.xlsx  master_20250422_072938.xlsx  master_20250422_073733.xlsx  master_20250422_074705.xlsx  master_20250423_084543.xlsx  master_20250423_094802.xlsx  master_20250426_104915.xlsx  master_20250426_105342.xlsx  master_20250427_185002.xlsx  master_20250427_185154.xlsx  master_20250427_193555.xlsx  master_20250427_194632.xlsx  master_20250427_195820.xlsx  master_20250427_200430.xlsx  master_20250427_201451.xlsx  master_20250427_204952.xlsx  master_20250427_205320.xlsx  master_20250427_205719.xlsx  master_20250430_221105.xlsx
media/summary/: summary_20250427_185002.xlsx  summary_20250427_185154.xlsx  summary_20250427_195820.xlsx  summary_20250427_200430.xlsx  summary_20250427_201451.xlsx  summary_20250427_204952.xlsx  summary_20250427_205320.xlsx  summary_20250427_205719.xlsx  summary_20250430_221105.xlsx
media/titles/: titles_20250422_071753.xlsx  titles_20250422_072938.xlsx  titles_20250422_073733.xlsx  titles_20250422_074705.xlsx  titles_20250423_084543.xlsx  titles_20250423_094802.xlsx  titles_20250426_104915.xlsx  titles_20250426_105342.xlsx
(+28 files in other folders)
